crates/nscript-syntax/src/parser.rs
use crate::{
    Diagnostic, Import, RuntimeProfile, Span, Token, TokenKind,
    ast::{
        AstProgram, CapabilityDeclaration, EventDeclaration, EventField, EventModeSyntax, Expr,
        ExprKind, FunctionDeclaration, Item, LetDeclaration, MatchArm, Parameter, Pattern,
        PatternKind, Permission, SelectExpression, Spanned, Statement, StatementKind,
        StoreDeclaration, TypeRef,
    },
};

pub(crate) fn parse(tokens: &[Token]) -> (AstProgram, Vec<Diagnostic>) {
    let mut parser = Parser {
        tokens,
        index: 0,
        diagnostics: Vec::new(),
        newline_ends_expression: false,
    };
    let items = parser.parse_items(None);
    (AstProgram { items }, parser.diagnostics)
}

/// Statement keywords that introduce a Layer 3 intent form (`docs/LAYER3.md`).
pub(crate) const LAYER3_FORMS: [&str; 32] = [
    "send",
    "reply",
    "repost",
    "delete",
    "comment",
    "report",
    "label",
    "status",
    "draft",
    "badge",
    "highlight",
    "assert",
    "calendar",
    "live",
    "image",
    "video",
    "file",
    "upload",
    "handler",
    "search",
    "react",
    "say",
    "zap",
    "kick",
    "ban",
    "on",
    "follow",
    "article",
    "message",
    "relays",
    "deploy",
    "save",
];

struct Parser<'a> {
    tokens: &'a [Token],
    index: usize,
    diagnostics: Vec<Diagnostic>,
    /// While parsing a `match` arm's value, a newline ends the expression, so
    /// the next line can start a new arm (`-3 => ..` is a pattern, not a
    /// subtraction from the previous value). Reset inside brackets, where a
    /// newline is just whitespace.
    newline_ends_expression: bool,
}

impl Parser<'_> {
    fn parse_items(&mut self, closing: Option<char>) -> Vec<Item> {
        let mut items = Vec::new();
        self.skip_terminators();
        while !self.at_end() && closing.is_none_or(|value| !self.at_symbol(value)) {
            let start = self.span();
            let diagnostics_before = self.diagnostics.len();
            let first_token = self.token_text();
            let item = match self.word() {
                Some("use") => self.parse_use().map(Item::Use),
                Some("runtime") => self.parse_runtime().map(Item::Runtime),
                Some("defaults") => self.parse_defaults(),
                Some("let" | "var") => self.parse_let().map(Item::Let),
                Some("fn") => self.parse_function().map(Item::Function),
                Some("event") => self.parse_event().map(Item::Event),
                Some("signer") => self.parse_capability().map(Item::Signer),
                Some("relay") => self.parse_capability().map(Item::Relay),
                Some("relayset") => self.parse_capability().map(Item::RelaySet),
                Some("key") => self.parse_key(),
                Some("store") => self.parse_store().map(Item::Store),
                Some("permissions") => self.parse_permissions(),
                Some("stream") => self.parse_stream(),
                _ => self.parse_statement().map(Item::Statement),
            };
            if let Some(item) = item {
                items.push(item);
                // A statement must end where the line does. Leftover tokens
                // would otherwise become extra statements: `kick alice bob`
                // would silently kick `alice` and ignore `bob`.
                if !self.statement_ended(closing) {
                    let junk = self.token_text();
                    self.error(
                        self.span(),
                        "E1101",
                        format!("unexpected `{junk}`; end a statement with a newline or `;`"),
                    );
                    self.recover_item();
                }
            } else {
                // A parser that gives up without a word must not let the
                // statement vanish: every path that fails reports something.
                if self.diagnostics.len() == diagnostics_before {
                    let first = first_token.clone();
                    self.error(
                        start,
                        "E1101",
                        format!("could not parse the statement starting at `{first}`"),
                    );
                }
                self.recover_item();
            }
            if self.span() == start && !self.at_end() {
                self.index += 1;
            }
            self.skip_terminators();
        }
        if let Some(symbol) = closing {
            self.expect_symbol(symbol);
        }
        items
    }

    fn parse_use(&mut self) -> Option<Import> {
        let span = self.bump()?.span;
        let path = self.module_path()?;
        let requirement = if self.eat_symbol('@') {
            if let Some(value) = self.take_string() {
                Some(value.value)
            } else {
                let mut value = String::new();
                while !self.at_terminator() && !self.at_end() {
                    value.push_str(&self.token_text());
                    self.index += 1;
                }
                Some(value)
            }
        } else {
            None
        };
        self.terminator();
        Some(Import {
            path,
            requirement,
            span,
        })
    }

    fn parse_runtime(&mut self) -> Option<Spanned<RuntimeProfile>> {
        let start = self.bump()?.span;
        let (value, span) = if self.eat_word("standard") {
            (RuntimeProfile::Standard, self.previous_span())
        } else if self.eat_word("hardened") && self.eat_symbol('-') && self.eat_word("agent") {
            (
                RuntimeProfile::HardenedAgent,
                start.join(self.previous_span()),
            )
        } else {
            self.error(self.span(), "E1101", "unknown runtime profile");
            return None;
        };
        self.terminator();
        Some(Spanned { value, span })
    }

    fn parse_defaults(&mut self) -> Option<Item> {
        let start = self.bump()?.span;
        self.expect_symbol('{')?;
        let (mut signer, mut relays) = (None, None);
        self.skip_terminators();
        while !self.at_symbol('}') && !self.at_end() {
            let key = self.take_name()?;
            self.expect_symbol(':')?;
            let value = self.take_name()?;
            match key.value.as_str() {
                "signer" => signer = Some(value),
                "relays" => relays = Some(value),
                _ => self.error(key.span, "E1101", "unknown defaults entry"),
            }
            self.terminator();
            self.skip_terminators();
        }
        let end = self.expect_symbol('}')?;
        Some(Item::Defaults {
            signer,
            relays,
            span: start.join(end),
        })
    }

    fn parse_let(&mut self) -> Option<LetDeclaration> {
        let start = self.bump()?.span;
        let name = self.take_name()?;
        let type_annotation = self.eat_symbol(':').then(|| self.parse_type()).flatten();
        self.expect_symbol('=')?;
        let value = self.parse_expression(0)?;
        self.terminator();
        Some(LetDeclaration {
            name,
            type_annotation,
            span: start.join(value.span),
            value,
        })
    }

    fn parse_function(&mut self) -> Option<FunctionDeclaration> {
        let start = self.bump()?.span;
        let name = self.take_name()?;
        let parameters = self.parse_parameters()?;
        let return_type = if self.eat_symbol('-') {
            self.expect_symbol('>')?;
            self.parse_type()
        } else {
            None
        };
        self.expect_symbol('{')?;
        let body = self.parse_items(Some('}'));
        Some(FunctionDeclaration {
            name,
            parameters,
            return_type,
            body,
            span: start.join(self.previous_span()),
        })
    }

    fn parse_parameters(&mut self) -> Option<Vec<Parameter>> {
        self.expect_symbol('(')?;
        let mut output = Vec::new();
        while !self.at_symbol(')') && !self.at_end() {
            let name = self.take_name()?;
            self.expect_symbol(':')?;
            output.push(Parameter {
                name,
                type_ref: self.parse_type()?,
            });
            if !self.eat_symbol(',') {
                break;
            }
        }
        self.expect_symbol(')')?;
        Some(output)
    }

    fn parse_event(&mut self) -> Option<EventDeclaration> {
        let start = self.bump()?.span;
        let name = self.take_name()?;
        self.expect_symbol('{')?;
        self.skip_terminators();
        let (mut kind, mut mode, mut parameter) = (None, EventModeSyntax::Regular, None);
        let mut fields = Vec::new();
        while !self.at_symbol('}') && !self.at_end() {
            if self.eat_word("replaceable") {
                mode = EventModeSyntax::Replaceable;
            } else if self.eat_word("ephemeral") {
                mode = EventModeSyntax::Ephemeral;
            } else if self.eat_word("parameterised") {
                self.expect_word("by")?;
                parameter = Some(self.take_name()?);
                mode = EventModeSyntax::Parameterised;
            } else {
                let field = self.take_name()?;
                self.expect_symbol(':')?;
                if field.value == "kind" {
                    kind = self
                        .take_integer()
                        .and_then(|value| u16::try_from(value).ok());
                } else {
                    let type_ref = self.parse_type()?;
                    let default = self
                        .eat_symbol('=')
                        .then(|| self.parse_expression(0))
                        .flatten();
                    fields.push(EventField {
                        name: field,
                        type_ref,
                        default,
                    });
                }
            }
            self.terminator();
            self.skip_terminators();
        }
        let end = self.expect_symbol('}')?;
        Some(EventDeclaration {
            name,
            kind,
            mode,
            parameter,
            fields,
            span: start.join(end),
        })
    }

    fn parse_capability(&mut self) -> Option<CapabilityDeclaration> {
        let start = self.bump()?.span;
        let name = self.take_name()?;
        self.expect_symbol('=')?;
        let value = self.parse_expression(0)?;
        self.terminator();
        Some(CapabilityDeclaration {
            name,
            span: start.join(value.span),
            value,
        })
    }

    /// `key name = host("label")`. The label names a key the host provisions;
    /// the script only ever holds an opaque handle to it.
    fn parse_key(&mut self) -> Option<Item> {
        let declaration = self.parse_capability()?;
        let ExprKind::Call { callee, arguments } = &declaration.value.value else {
            self.error(
                declaration.value.span,
                "E1101",
                "a key is declared `key name = host(\"label\")`",
            );
            return None;
        };
        let is_host = matches!(&callee.value, ExprKind::Identifier(name) if name == "host");
        let labelled = matches!(arguments.as_slice(), [argument] if matches!(argument.value, ExprKind::Text(_)));
        if !is_host || !labelled {
            self.error(
                declaration.value.span,
                "E1101",
                "a key is declared `key name = host(\"label\")`",
            );
            return None;
        }
        Some(Item::Key(declaration))
    }

    fn parse_store(&mut self) -> Option<StoreDeclaration> {
        let start = self.bump()?.span;
        let name = self.take_name()?;
        let (mut key_type, mut value_type) = (None, None);
        if self.eat_symbol('<') {
            let first = self.parse_type()?;
            if self.eat_symbol(',') {
                key_type = Some(first);
                value_type = self.parse_type();
            } else {
                value_type = Some(first);
            }
            self.expect_symbol('>')?;
        } else if self.eat_symbol('{') {
            self.skip_terminators();
            while !self.at_symbol('}') && !self.at_end() {
                let field = self.take_name()?;
                self.expect_symbol(':')?;
                let ty = self.parse_type()?;
                if field.value == "key" {
                    key_type = Some(ty);
                } else if field.value == "value" {
                    value_type = Some(ty);
                }
                self.terminator();
                self.skip_terminators();
            }
            self.expect_symbol('}')?;
        }
        self.terminator();
        Some(StoreDeclaration {
            name,
            key_type,
            value_type: value_type.unwrap_or(TypeRef {
                name: "Unit".to_owned(),
                arguments: Vec::new(),
                span: start,
            }),
            span: start.join(self.previous_span()),
        })
    }

    fn parse_permissions(&mut self) -> Option<Item> {
        let start = self.bump()?.span;
        self.expect_symbol('{')?;
        self.skip_terminators();
        let mut permissions = Vec::new();
        while !self.at_symbol('}') && !self.at_end() {
            let operation = self.take_name()?;
            let permission = match operation.value.as_str() {
                "read" | "publish" => {
                    let event = self.parse_type()?;
                    let relayset = if self.eat_word(if operation.value == "read" {
                        "from"
                    } else {
                        "to"
                    }) {
                        Some(self.take_name()?)
                    } else {
                        None
                    };
                    if operation.value == "read" {
                        Permission::Read { event, relayset }
                    } else {
                        Permission::Publish { event, relayset }
                    }
                }
                "sign" => Permission::Sign {
                    event: self.parse_type()?,
                    signer: if self.eat_word("with") {
                        Some(self.take_name()?)
                    } else {
                        None
                    },
                },
                "encrypt" | "decrypt" => Permission::Typed {
                    target: self.parse_type()?,
                    capability: if self.eat_word("with") {
                        Some(self.take_name()?)
                    } else {
                        None
                    },
                    operation,
                },
                "http" => Permission::Http(self.take_string()?),
                _ => {
                    let argument = if self.at_terminator() {
                        None
                    } else {
                        self.take_name()
                    };
                    // `concord <Verb> in <scope>` (RFC 0002 §2): only the
                    // `concord` namespace takes a scope, so no other
                    // two-word permission (`storage SeenEvents`, and so on)
                    // is affected.
                    let scope = if operation.value == "concord" && self.eat_word("in") {
                        Some(self.take_name()?)
                    } else {
                        None
                    };
                    Permission::Named {
                        operation,
                        argument,
                        scope,
                    }
                }
            };
            permissions.push(permission);
            self.terminator();
            self.skip_terminators();
        }
        let end = self.expect_symbol('}')?;
        Some(Item::Permissions(Spanned {
            value: permissions,
            span: start.join(end),
        }))
    }

    fn parse_stream(&mut self) -> Option<Item> {
        let start = self.bump()?.span;
        let name = self.take_name()?;
        self.expect_symbol('=')?;
        let value = self.parse_expression(0)?;
        self.terminator();
        Some(Item::Stream {
            name,
            span: start.join(value.span),
            value,
        })
    }

    /// Parses an expression, reporting `E1101` if it is absent. A Layer 3
    /// statement that fails to parse is otherwise dropped without a trace, and
    /// a moderation statement must never fail silently.
    fn expression_or_error(&mut self, minimum: u8, expected: &str) -> Option<Expr> {
        let before = self.diagnostics.len();
        let parsed = self.parse_expression(minimum);
        if parsed.is_none() && self.diagnostics.len() == before {
            self.error(self.span(), "E1101", format!("expected {expected}"));
        }
        parsed
    }

    /// `module.operation(arguments)` as an expression node, the shape every
    /// Layer 3 form lowers to.
    fn module_call(module: &str, operation: &str, arguments: Vec<Expr>, span: Span) -> Expr {
        Spanned {
            value: ExprKind::Call {
                callee: Box::new(Spanned {
                    value: ExprKind::Member {
                        value: Box::new(Spanned {
                            value: ExprKind::Identifier(module.to_owned()),
                            span,
                        }),
                        name: Spanned {
                            value: operation.to_owned(),
                            span,
                        },
                    },
                    span,
                }),
                arguments,
            },
            span,
        }
    }

    /// A record literal `Name { field: value; ... }`.
    fn construct(name: &str, fields: Vec<(&str, Expr)>, span: Span) -> Expr {
        Spanned {
            value: ExprKind::Construct {
                name: Spanned {
                    value: name.to_owned(),
                    span,
                },
                fields: fields
                    .into_iter()
                    .map(|(field, value)| {
                        (
                            Spanned {
                                value: field.to_owned(),
                                span,
                            },
                            value,
                        )
                    })
                    .collect(),
            },
            span,
        }
    }

    /// Parses a statement. A Layer 3 form that fails to parse must say so: the
    /// item loop discards a `None` without a trace, which would let a script
    /// that means to `kick`, `send` or `zap` check clean and do nothing.
    fn parse_statement(&mut self) -> Option<Statement> {
        let form = self
            .word()
            .and_then(|word| LAYER3_FORMS.iter().find(|form| **form == word))
            .copied();
        let start = self.span();
        let before = self.diagnostics.len();
        let parsed = self.parse_statement_inner();
        if let Some(form) = form
            && parsed.is_none()
            && self.diagnostics.len() == before
        {
            self.error(start, "E1101", format!("incomplete `{form}` statement"));
        }
        parsed
    }

    #[allow(clippy::too_many_lines)]
    fn parse_statement_inner(&mut self) -> Option<Statement> {
        let start = self.span();
        let value = match self.word() {
            Some("return") => {
                self.index += 1;
                let value = (!self.at_terminator())
                    .then(|| self.parse_expression(0))
                    .flatten();
                StatementKind::Return(value)
            }
            Some("for") => {
                self.index += 1;
                let binding = self.take_name()?;
                self.expect_word("in")?;
                let value = self.parse_expression(0)?;
                let body = self.parse_block()?;
                StatementKind::For {
                    binding,
                    value,
                    body,
                }
            }
            Some("if") => {
                self.index += 1;
                let condition = self.parse_expression(0)?;
                let then_body = self.parse_block()?;
                let else_body = if self.eat_word("else") {
                    if self.word() == Some("if") {
                        // `else if ...`: the grammar (`spec/grammar.ebnf`'s
                        // `if_stmt`) allows the else clause to be another
                        // `if_stmt`, not only a block. Parse that nested `if`
                        // as its own statement and wrap it as the sole item
                        // of this `else`'s body, so `else if c { a } else { b }`
                        // means exactly what `else { if c { a } else { b } }`
                        // already did.
                        vec![Item::Statement(self.parse_statement()?)]
                    } else {
                        self.parse_block()?
                    }
                } else {
                    Vec::new()
                };
                StatementKind::If {
                    condition,
                    then_body,
                    else_body,
                }
            }
            Some("on") => {
                self.index += 1;
                let source = self.parse_control_expression()?;
                let predicate = if self.eat_word("where") {
                    self.parse_expression(0)
                } else {
                    None
                };
                let body = self.parse_block()?;
                StatementKind::On {
                    source,
                    predicate,
                    body,
                }
            }
            Some("once") => {
                self.index += 1;
                self.expect_symbol('(')?;
                let key = self.parse_expression(0)?;
                self.expect_symbol(')')?;
                StatementKind::Once {
                    key,
                    body: self.parse_block()?,
                }
            }
            Some("every") => {
                self.index += 1;
                let duration = self.parse_expression(0)?;
                StatementKind::Every {
                    duration,
                    body: self.parse_block()?,
                }
            }
            Some("at") => {
                self.index += 1;
                let schedule = self.parse_expression(0)?;
                StatementKind::At {
                    schedule,
                    body: self.parse_block()?,
                }
            }
            Some("send") => {
                self.index += 1;
                let value = self.parse_expression(0)?;
                let value = if self.eat_word("to") {
                    let recipient = self.parse_expression(0)?;
                    let span = value.span.join(recipient.span);
                    let message = Spanned {
                        value: ExprKind::Construct {
                            name: Spanned {
                                value: "PrivateMessage".to_owned(),
                                span,
                            },
                            fields: vec![
                                (
                                    Spanned {
                                        value: "content".to_owned(),
                                        span,
                                    },
                                    value,
                                ),
                                (
                                    Spanned {
                                        value: "recipient".to_owned(),
                                        span,
                                    },
                                    recipient,
                                ),
                            ],
                        },
                        span,
                    };
                    Spanned {
                        value: ExprKind::Call {
                            callee: Box::new(Spanned {
                                value: ExprKind::Member {
                                    value: Box::new(Spanned {
                                        value: ExprKind::Identifier("nip17".to_owned()),
                                        span,
                                    }),
                                    name: Spanned {
                                        value: "send_private".to_owned(),
                                        span,
                                    },
                                },
                                span,
                            }),
                            arguments: vec![message],
                        },
                        span,
                    }
                } else {
                    value
                };
                let signer = if self.eat_word("with") {
                    self.parse_expression(0)
                } else {
                    None
                };
                StatementKind::Send { value, signer }
            }
            Some("reply") => {
                self.index += 1;
                let content = self.parse_expression(0)?;
                if !self.eat_word("to") {
                    return None;
                }
                let target = self.parse_expression(0)?;
                let span = content.span.join(target.span);
                let reply = Spanned {
                    value: ExprKind::Construct {
                        name: Spanned {
                            value: "Reply".to_owned(),
                            span,
                        },
                        fields: vec![
                            (
                                Spanned {
                                    value: "target".to_owned(),
                                    span,
                                },
                                target.clone(),
                            ),
                            (
                                Spanned {
                                    value: "root".to_owned(),
                                    span,
                                },
                                target,
                            ),
                            (
                                Spanned {
                                    value: "content".to_owned(),
                                    span,
                                },
                                content,
                            ),
                        ],
                    },
                    span,
                };
                StatementKind::Expression(Spanned {
                    value: ExprKind::Call {
                        callee: Box::new(Spanned {
                            value: ExprKind::Member {
                                value: Box::new(Spanned {
                                    value: ExprKind::Identifier("nip10".to_owned()),
                                    span,
                                }),
                                name: Spanned {
                                    value: "publish_reply".to_owned(),
                                    span,
                                },
                            },
                            span,
                        }),
                        arguments: vec![reply],
                    },
                    span,
                })
            }
            Some("repost") => {
                self.index += 1;
                let target = self.parse_expression(0)?;
                let span = target.span;
                let repost = Spanned {
                    value: ExprKind::Construct {
                        name: Spanned {
                            value: "Repost".to_owned(),
                            span,
                        },
                        fields: vec![(
                            Spanned {
                                value: "target".to_owned(),
                                span,
                            },
                            target,
                        )],
                    },
                    span,
                };
                StatementKind::Expression(Spanned {
                    value: ExprKind::Call {
                        callee: Box::new(Spanned {
                            value: ExprKind::Member {
                                value: Box::new(Spanned {
                                    value: ExprKind::Identifier("nip18".to_owned()),
                                    span,
                                }),
                                name: Spanned {
                                    value: "publish_repost".to_owned(),
                                    span,
                                },
                            },
                            span,
                        }),
                        arguments: vec![repost],
                    },
                    span,
                })
            }
            Some("delete") => {
                self.index += 1;
                let target = self.parse_expression(0)?;
                let span = target.span;
                let request = Spanned {
                    value: ExprKind::Construct {
                        name: Spanned {
                            value: "DeletionRequest".to_owned(),
                            span,
                        },
                        fields: vec![
                            (
                                Spanned {
                                    value: "target".to_owned(),
                                    span,
                                },
                                target,
                            ),
                            (
                                Spanned {
                                    value: "reason".to_owned(),
                                    span,
                                },
                                Spanned {
                                    value: ExprKind::Text(String::new()),
                                    span,
                                },
                            ),
                        ],
                    },
                    span,
                };
                StatementKind::Expression(Spanned {
                    value: ExprKind::Call {
                        callee: Box::new(Spanned {
                            value: ExprKind::Member {
                                value: Box::new(Spanned {
                                    value: ExprKind::Identifier("nip09".to_owned()),
                                    span,
                                }),
                                name: Spanned {
                                    value: "request_deletion".to_owned(),
                                    span,
                                },
                            },
                            span,
                        }),
                        arguments: vec![request],
                    },
                    span,
                })
            }
            Some("comment") => {
                self.index += 1;
                let content = self.parse_expression(0)?;
                if !self.eat_word("on") {
                    return None;
                }
                let target = self.parse_expression(0)?;
                let span = content.span.join(target.span);
                let comment = Spanned {
                    value: ExprKind::Construct {
                        name: Spanned {
                            value: "Comment".to_owned(),
                            span,
                        },
                        fields: vec![
                            (
                                Spanned {
                                    value: "target".to_owned(),
                                    span,
                                },
                                target,
                            ),
                            (
                                Spanned {
                                    value: "content".to_owned(),
                                    span,
                                },
                                content,
                            ),
                        ],
                    },
                    span,
                };
                StatementKind::Expression(Spanned {
                    value: ExprKind::Call {
                        callee: Box::new(Spanned {
                            value: ExprKind::Member {
                                value: Box::new(Spanned {
                                    value: ExprKind::Identifier("nip22".to_owned()),
                                    span,
                                }),
                                name: Spanned {
                                    value: "publish_comment".to_owned(),
                                    span,
                                },
                            },
                            span,
                        }),
                        arguments: vec![comment],
                    },
                    span,
                })
            }
            Some("report") => {
                self.index += 1;
                let target = self.parse_expression(0)?;
                if !self.eat_word("as") {
                    return None;
                }
                let category = self.parse_expression(0)?;
                let span = target.span.join(category.span);
                let report = Spanned {
                    value: ExprKind::Construct {
                        name: Spanned {
                            value: "Report".to_owned(),
                            span,
                        },
                        fields: vec![
                            (
                                Spanned {
                                    value: "target".to_owned(),
                                    span,
                                },
                                target,
                            ),
                            (
                                Spanned {
                                    value: "category".to_owned(),
                                    span,
                                },
                                category,
                            ),
                            (
                                Spanned {
                                    value: "content".to_owned(),
                                    span,
                                },
                                Spanned {
                                    value: ExprKind::Text(String::new()),
                                    span,
                                },
                            ),
                        ],
                    },
                    span,
                };
                StatementKind::Expression(Spanned {
                    value: ExprKind::Call {
                        callee: Box::new(Spanned {
                            value: ExprKind::Member {
                                value: Box::new(Spanned {
                                    value: ExprKind::Identifier("nip56".to_owned()),
                                    span,
                                }),
                                name: Spanned {
                                    value: "publish_report".to_owned(),
                                    span,
                                },
                            },
                            span,
                        }),
                        arguments: vec![report],
                    },
                    span,
                })
            }
            Some("label") => {
                self.index += 1;
                let target = self.parse_expression(0)?;
                if !self.eat_word("as") {
                    return None;
                }
                let value = self.parse_expression(0)?;
                let span = target.span.join(value.span);
                let label = Spanned {
                    value: ExprKind::Construct {
                        name: Spanned {
                            value: "Label".to_owned(),
                            span,
                        },
                        fields: vec![
                            (
                                Spanned {
                                    value: "target".to_owned(),
                                    span,
                                },
                                target,
                            ),
                            (
                                Spanned {
                                    value: "namespace".to_owned(),
                                    span,
                                },
                                Spanned {
                                    value: ExprKind::Text("nscript".to_owned()),
                                    span,
                                },
                            ),
                            (
                                Spanned {
                                    value: "value".to_owned(),
                                    span,
                                },
                                value,
                            ),
                        ],
                    },
                    span,
                };
                StatementKind::Expression(Spanned {
                    value: ExprKind::Call {
                        callee: Box::new(Spanned {
                            value: ExprKind::Member {
                                value: Box::new(Spanned {
                                    value: ExprKind::Identifier("nip32".to_owned()),
                                    span,
                                }),
                                name: Spanned {
                                    value: "publish_label".to_owned(),
                                    span,
                                },
                            },
                            span,
                        }),
                        arguments: vec![label],
                    },
                    span,
                })
            }
            Some("status") => {
                self.index += 1;
                let status = self.parse_expression(0)?;
                let span = status.span;
                let user_status = Spanned {
                    value: ExprKind::Construct {
                        name: Spanned {
                            value: "UserStatus".to_owned(),
                            span,
                        },
                        fields: vec![
                            (
                                Spanned {
                                    value: "status".to_owned(),
                                    span,
                                },
                                status,
                            ),
                            (
                                Spanned {
                                    value: "content".to_owned(),
                                    span,
                                },
                                Spanned {
                                    value: ExprKind::Text(String::new()),
                                    span,
                                },
                            ),
                        ],
                    },
                    span,
                };
                StatementKind::Expression(Spanned {
                    value: ExprKind::Call {
                        callee: Box::new(Spanned {
                            value: ExprKind::Member {
                                value: Box::new(Spanned {
                                    value: ExprKind::Identifier("nip38".to_owned()),
                                    span,
                                }),
                                name: Spanned {
                                    value: "publish_status".to_owned(),
                                    span,
                                },
                            },
                            span,
                        }),
                        arguments: vec![user_status],
                    },
                    span,
                })
            }
            Some("draft") => {
                self.index += 1;
                let identifier = self.parse_expression(0)?;
                if !self.eat_word("with") {
